<resources>
    <string name="app_name">Lazlo</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_task">Create new task</string>
    <string name="add_task">Add task</string>
    <string name="save_task">Save task</string>
    <string name="save_as_draft">save as draft</string>
    <string name="bills">Bills</string>
    <string name="task_title">Task title</string>
    <string name="view_and_edit_individual_task">View and Edit individual task</string>
    <string name="task_description">Task description</string>
    <string name="save">Save</string>
    <string name="show_tasks">Show Tasks</string>
    <string name="task_category">Task category</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset password</string>
    <string name="password_reset_success">Password reset success\nPassword has been reset to blah\nLogin and set your new password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="Failed_password_reset">Failed to reset password, try again</string>
    <string name="select_category">Select category</string>
    <string name="select_the_date">Select date</string>
    <string name="select_the_time">Select time</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="school">School</string>
    <string name="business">Business</string>
    <string name="work">Work</string>
    <string name="menu">Menu</string>
    <string name="view_predicted_spending">View predicted spending</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="show_spending">Show spending</string>
    <string name="No_entries_found">No entries found</string>
    <string name="money">Kshs </string>
    <string name="task_deadline">Task deadline</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="dashboard">Dashboard</string>
    <string name="choose_a_month">Choose a month</string>
    <string name="pending_tasks">Pending tasks</string>
    <string name="total_tasks">Total tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="spending_view">Spending view</string>
    <string name="monthly">Monthly</string>
    <string name="custom">Custom</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="kshs">Kshs</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sept">Sept</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="hash_tag">#</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="my_account">My account</string>
    <string name="sort">Sort</string>
    <string name="by_date">By date</string>
    <string name="by_price">By price</string>
    <string name="by_duration">By duration</string>
    <string name="by_creation_time">By creation time</string>
    <string name="logout">Logout</string>
    <string name="forget_n_password">Forget\n password</string>
    <string name="enter_your_email_below_to_receive_a_temporary_password">Enter your email below to reset your password</string>
    <string name="todo">TODO</string>
    <string name="new_credentials">New Credentials</string>
    <string name="enter_your_new_password_and_confirm_below">Enter your new password and confirm below</string>
    <string name="entry_image">entry image</string>
    <string name="view">View</string>
    <string name="reschedule">Reschedule</string>
    <string name="predicted_duration">Predicted duration</string>
    <string name="unit">Unit</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="status">Status</string>
    <string name="profile_picture">Profile picture</string>
    <string name="exit">Exit</string>
    <string name="complete_task">Complete task</string>
    <string name="pause_task">Pause task</string>
    <string name="resume_task">Resume Task</string>
    <string name="start_task">Start task</string>
    <string name="track_your_time_title">Track your time</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="resume_timer">Resume</string>
    <string name="complete_timer">Complete</string>
    <string name="time_tracker_helper_text">1. Press start to start recording time lost\n\n 2. Press pause to pause the timer. \n\n3. Press stop to end that timer session, a dialog will appear, fill in reason to account for that lost time.</string>
    <string name="timer_loading">loading ..</string>
    <string name="lost_time_zero_">Zero lost time during the day ?</string>
    <string name="sleep_must_be_accounted_for">Sleep must be accounted for</string>
    <string name="zero_tasks_">Zero tasks have been worked on today</string>
    <string-array name="categories">
        <item>Home</item>
        <item>Shopping</item>
        <item>Work</item>
        <item>School</item>
        <item>Business</item>
    </string-array>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="durationUnits">
        <item>hrs</item>
        <item>min</item>
        <item>sec</item>
    </string-array>
    <string-array name="hoursOfSleep">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="minutesOfSleep">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
</resources>