<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search_bar"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/myAccount"
        app:showAsAction="never"
        android:title="@string/my_account">
    </item>
    <item
        android:id="@+id/myDashboard"
        app:showAsAction="never"
        android:title="@string/dashboard">
    </item>

    <item
        android:id="@+id/sortTasks"
        app:showAsAction="never"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/sortByDates"
                app:showAsAction="never"
                android:title="@string/by_date">
            </item>
            <item
                android:id="@+id/sortByPrice"
                app:showAsAction="never"
                android:title="@string/by_price">
            </item>
            <item
                android:id="@+id/sortByDuration"
                app:showAsAction="never"
                android:title="@string/by_duration">
            </item>
            <item
                android:id="@+id/sortByCreationTime"
                app:showAsAction="never"
                android:title="@string/by_creation_time">
            </item>
        </menu>

    </item>
    <item
        android:id="@+id/exit"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>
</menu>