<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reset_password"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_lock_open_24"
        android:contentDescription="@string/entry_image"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_credentials"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="@dimen/activity_vertical_margin"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_new_password_and_confirm_below"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="@dimen/activity_vertical_margin"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"


        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColor="@color/black"

        />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        app:passwordToggleEnabled="true"

        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:autofillHints="password"

        android:textColor="@color/black"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/black"
        />

</LinearLayout>