<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendingTasks"
    >

    <LinearLayout
        android:id="@+id/completedTasks_accountActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/grey"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/completedTasks_userName"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/grey"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/completedTasks_hamburger_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:contentDescription="@string/menu"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_baseline_more2_vert_24"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_below="@id/completedTasks_accountActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completedTasks_homeTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_baseline_home_24"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/white"


            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completedTasks_shoppingTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shopping"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_baseline_shopping_cart_24"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completedTasks_schoolTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_baseline_school_24"
            android:text="@string/school"
            android:textSize="9sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completedTasks_businessTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_baseline_business_24"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/completedTasks_workTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/work"
            android:textSize="9sp"
            android:drawableTop="@drawable/ic_baseline_work_24"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@color/white"
            />
    </LinearLayout>


    <ListView
        android:id="@+id/completedTasks_task_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        />
</RelativeLayout>