<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/cardview_dark_background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/app_title_on_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignupUsername_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_username_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignupUsername_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:autofillHints="Username"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignupEmail_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignupEmail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="Email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignupPassword_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignupPassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignupPasswordConfirm_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_baseline_password_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignupPasswordConfirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:autofillHints="password"
            />
    </com.google.android.material.textfield.TextInputLayout>

  <!--  <Button
        android:id="@+id/btnSignUp_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_up"
        />-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp_signUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_up"

        />
    <TextView
        android:id="@+id/login_or_signup_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/or"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/Switch2login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
android:textColor="@color/white"
        />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>